--- a/src/components/main/friends/style.scss
+++ b/src/components/main/friends/style.scss
@@ -18,11 +18,14 @@
         flex-direction: column;
         padding-right: calc(1rem + 5px);
         width: calc(100% - 0.5rem);
+        margin-right: -5px;
+        overflow-y: scroll;
 
         &:hover {
-            overflow-y: scroll;
-            margin-right: -5px;
-            padding-right: 1rem;
+            &::-webkit-scrollbar-thumb {
+                background: var(--theme-primary);
+                opacity: 1;
+            }
         }
     }
 
